# devops.bazel_infrastructure

./: .bazelrc  .clang-tidy  .gitignore  Bazel-notes.md  MODULE.bazel  README.md
.github/workflows/: smoke_test.yml
doc/: knowledge.md
doc/sample_code/: settings.json
tests/: .bazelrc  .clang-format  BUILD.bazel  MODULE.bazel  README.md
tests/C++/: BUILD.bazel  compiler_outputs.md  hello  hello.cpp
tests/c/my_hello/: BUILD.bazel  hello.c
tests/cpp/: BUILD.bazel  hello.cpp
tests/cpp/lib/: BUILD.bazel  sys_info.cpp  sys_info.h
tests/cpp/microsoft_proxy/: BUILD.bazel  proxy.h
tests/cpp/microsoft_proxy/tests/: failed_cmd.md  proxy_test.cpp
tests/cpp/my_hello/: BUILD.bazel  compiler_outputs.md  hello.cpp
tests/cpp/my_hello/lib/: BUILD.bazel  bar.h  foo.h  sys_info.h
tests/cpp/my_hello/lib/src/: bar.cpp  foo.cpp  sys_info.cpp
tests/cpp/protobuf/: BUILD.bazel  main.cpp  msg.proto
tests/external_toolchains/: BUILD.bazel
tests/integration_test_suites/: smoke_test.sh
tests/toolchains/: BUILD.bazel
toolchains/Bazel/common/: common.bzl
toolchains/Bazel/common/platform/: BUILD.bazel
toolchains/C++/: BUILD.bazel  cc_toolchain_config.bzl  cc_toolchain_config_linux.bzl  cc_toolchain_config_macosx.bzl  rules.bzl
toolchains/C++/extension/: BUILD.bazel  cpp.bazel
toolchains/Python/: BUILD.bazel  black.bzl  header_guard.bzl  header_guard.py  pyvenv_runner.bzl  requirements.txt  run_black.sh.template  run_black_cmd.sh  venv_runner.sh.template
toolchains/bazel_buildifier/: BUILD.bazel  bazel-buildifier.bzl  bazel-buildifier.template.sh  buildifier_module.bzl
toolchains/bzl_utils/common/: common.bzl
toolchains/cpp/: BUILD.bazel  cc_config_example.md
toolchains/cpp/build_config/: cc_toolchain_config_linux.bzl  cc_toolchain_config_macosx.bzl  llvm_dir.bzl
toolchains/cpp/build_tools/: BUILD.bazel  llvm_dir.bzl  llvm_toolchain_config.bzl
toolchains/cpp/build_tools/llvm.linux.aarch64/: BUILD.bazel  llvm_toolchain_config.bzl
toolchains/cpp/build_tools/llvm.linux.x86_64/: BUILD.bazel  llvm_toolchain_config.bzl
toolchains/cpp/build_tools/llvm.macosx.aarch64/: BUILD.bazel  llvm_toolchain_config.bzl
toolchains/cpp/clang_tidy/: BUILD.bazel  clang_tidy.bzl  clang_tidy_worked.bzl  constants.bzl
toolchains/cpp/format/: BUILD.bazel  clang-format-symlink  clang_format.bzl  clang_format.template.sh
toolchains/cpp/header_guard/: BUILD.bazel  header_guard.py
toolchains/internal/: common.bzl
toolchains/llvm/: module.bzl  module_extension.bzl
toolchains/llvm/internal/: llvm_binaries.bzl
toolchains/llvm/repos/: llvm_binaries.bzl  llvm_toolchain.bzl
toolchains/llvm/repos/llvm_binaries/: repo_rule.bzl
toolchains/llvm/repos/llvm_binaries/internal/: llvm_binaries.BUILD.bazel.tpl
toolchains/llvm/repos/llvm_toolchain/: BUILD.bazel.tpl  repo_rule.bzl
toolchains/llvm/repos/llvm_toolchain/example_configs/: cc_config_example_linux_aarch64.md
toolchains/llvm/repos/llvm_toolchain/internal/: constants.bzl  darwin_config.bzl  linux_x86_64_config.bzl
toolchains/llvm/repos/llvm_toolchain/internal/_example_configs/: cc_config_example_macos_aarch64.md
toolchains/llvm/repos/llvm_toolchain/internal/example_configs/: cc_config_example_linux_x86_64.md
toolchains/llvm/repos/llvm_toolchain/internal/template_repo/: BUILD.bazel.tpl
toolchains/llvm/repos/llvm_toolchain/internal/template_repo/clang_tools/clang_format/: BUILD.bazel.tpl  clang_format.bzl.tpl
toolchains/llvm/repos/llvm_toolchain/internal/template_repo/clang_tools/clang_tidy/: BUILD.bazel.tpl  clang_tidy.bzl.tpl
toolchains/llvm/repos/llvm_toolchain/internal/template_repo/toolchain_config/: darwin_config.bzl.tpl  linux_x86_64_config.bzl.tpl
toolchains/llvm/utils/: BUILD.bazel  get_llvm_version.sh  grep_clang_version.sh
