"""Module file for this bazel workspace."""

module(
    name = "devops.bazel_infrastructure",
    version = "0.0.0",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "platforms", version = "0.0.10")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_python", version = "0.32.2")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//toolchains/Python:requirements.txt",
)
use_repo(pip, "pip")

bazel_buildifier_exe = use_extension("//toolchains/bazel_buildifier:buildifier_module.bzl", "bazel_buildifier_exe")
use_repo(bazel_buildifier_exe, "buildifier_exe")  # NOTE: The repo name is also defined in other files.

llvm_module = use_extension("//toolchains/llvm:module_extension.bzl", "llvm_module")
llvm_module.config()
use_repo(llvm_module, "llvm_binaries")
use_repo(llvm_module, "llvm_toolchain")
