"""Import the toolchains created by @devops.bazel_infrastructure"""

alias(
    name = "llvm_toolchain",
    actual = "@llvm_toolchain//:llvm_toolchain",
)

alias(
    name = "clang_format_fix",
    actual = "@llvm_toolchain//:clang_format_fix",
)

alias(
    name = "clang_format_diff",
    actual = "@llvm_toolchain//:clang_format_diff",
)

alias(
    name = "header_guard",
    actual = "@devops.bazel_infrastructure//toolchains/header_guard:header_guard",
)

alias(
    name = "bazel_buildifier_fix",
    actual = "@devops.bazel_infrastructure//toolchains/bazel_buildifier:bazel_buildifier_fix",
)

alias(
    name = "bazel_buildifier_check",
    actual = "@devops.bazel_infrastructure//toolchains/bazel_buildifier:bazel_buildifier_check",
)

alias(
    name = "python_black",
    actual = "@devops.bazel_infrastructure//toolchains/Python:python_black",
)
