load(
    ":cc_toolchain_config_macosx.bzl",
    "llvm_macosx_toolchain_config",
)

llvm_macosx_toolchain_config(
    name = "macosx_llvm",
    llvm_version = "18.1.5",
)

filegroup(name = "empty")

cc_toolchain(
    name = "_macosx_homebrew_llvm_toolchain",
    toolchain_identifier = "llvm_toolchain_18.1.5",
    toolchain_config = ":macosx_llvm",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
)

toolchain(
    name = "macosx_homebrew_llvm_toolchain",
    toolchain = ":_macosx_homebrew_llvm_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)