load("@toolchains_llvm//toolchain:rules.bzl", "llvm_toolchain")

def _cpp_impl(module_ctx)
    """
    The macro that instantiate a cpp_toolchain.
    """

    for mod in module_ctx.modules:
        toolchain_names = []

        # ...
        attrs = {}

        # NOTE: The toolchain is instantiated by this line.
        y_cc_toolchain(**attrs)


cpp = module_extension(
    implementation = "_cpp_impl",
    tag_classes = {},
    doc = "Module extension for C++ toolchain.",
    environ = [], # TODO: Can pass the system intrinsic env variables here?
    os_dependent = True,
    arch_dependent = True,
)
