load("@bazel_skylib//lib:paths.bzl", "paths")
load("//toolchains/cpp/build_tools:llvm_dir.bzl", "LLVM_TOOLCHAIN_DICT")

sh_binary(
    name = "run_clang_tidy_sh",
    srcs = ["run_clang_tidy.sh"],
    data = [".clang-tidy"],
)

genrule(
    name = "clang-tidy-symlink",
    outs = ["clang-tidy.symlink"],
    cmd =
        select(
            {
                "@platforms//os:macos": "ln -s {} $(OUTS)".format(
                    paths.join(
                        LLVM_TOOLCHAIN_DICT["macosx"]["llvm_dir"],
                        "bin/clang-tidy",
                    ),
                    # NOTE: $(OUTS) refers to "outs" attribute,
                    #       see https://docs.bazel.build/versions/main/be/general.html#genrule-outs
                ),
                "@platforms//os:linux": "ln -s {} $(OUTS)".format(
                    paths.join(
                        LLVM_TOOLCHAIN_DICT["linux"]["llvm_dir"],
                        "bin/clang-tidy",
                    ),
                ),
            },
        ),
    executable = True,  # NOTE: important to make the symlink executable
    visibility = ["//visibility:public"],
)
