load("@bazel_skylib//lib:paths.bzl", "paths")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("//toolchains/cpp/build_config:llvm_dir.bzl", "LLVM_TOOLCHAIN_DICT")
load("//toolchains/cpp/format:clang_format.bzl", "clang_format_check")

genrule(
    name = "create-symlink",
    srcs = [],
    outs = ["clang-format-symlink"],
    cmd =
        select(
            {
                "//toolchains/Bazel/common/platform:macosx": "ln -s {} $(OUTS)".format(
                    paths.join(
                        LLVM_TOOLCHAIN_DICT["macosx"]["llvm_dir"],
                        "bin/clang-format",
                    ),
                ),
                "//toolchains/Bazel/common/platform:linux": "ln -s {} $(OUTS)".format(
                    paths.join(
                        LLVM_TOOLCHAIN_DICT["linux"]["llvm_dir"],
                        "bin/clang-format",
                    ),
                ),
            },
        ),  # $(OUTS) refers to "outs" attribute
    executable = True,
)

native_binary(
    name = "clang-format-native-binary",
    src = ":create-symlink",
    out = "clang-format-native-binary",
    visibility = ["//visibility:public"],
)

clang_format_check(
    name = "clang_format_fix",
    clang_format_binary = ":clang-format-native-binary",
    mode = "fix",
)

clang_format_check(
    name = "clang_format_diff",
    clang_format_binary = ":clang-format-native-binary",
    mode = "diff",
)
