load("//toolchains/cpp/format:clang_format.bzl", "clang_format_check")

clang_format_check(
    name = "clang_format_fix",
    clang_format_binary = "@llvm_binaries//:clang-format",
    mode = "fix",
    visibility = ["//visibility:public"],
)

clang_format_check(
    name = "clang_format_diff",
    clang_format_binary = "@llvm_binaries//:clang-format",
    mode = "diff",
    visibility = ["//visibility:public"],
)
