cc_library(
    name = "sys_info",
    srcs = ["src/sys_info.cpp"],
    hdrs = ["sys_info.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "foo",
    srcs = ["src/foo.cpp"],
    hdrs = ["foo.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bar",
    srcs = ["src/bar.cpp"],
    hdrs = ["bar.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "foobar_srcs",
    srcs = [
        "src/bar.cpp",
        "src/foo.cpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "foobar",
    srcs = [
        ":foobar_srcs",
    ],
    hdrs = [
        "bar.h",
        "foo.h",
    ],
    visibility = ["//visibility:public"],
)
