load("//toolchains/cpp/build_tools:llvm_dir.bzl", "LLVM_TOOLCHAIN_DICT")
load(":llvm_toolchain_config.bzl", "MACRO_llvm_toolchain_config")

MACRO_llvm_toolchain_config(
    name = "llvm.linux.aarch64.cc_toolchain_config",
    llvm_dir = LLVM_TOOLCHAIN_DICT["linux"]["llvm_dir"],
    llvm_major_version = LLVM_TOOLCHAIN_DICT["linux"]["llvm_major_version"],
    sysroot = LLVM_TOOLCHAIN_DICT["linux"]["sysroot"],
)

filegroup(name = "empty")

cc_toolchain(
    name = "_llvm.linux.aarch64.cc_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":llvm.linux.aarch64.cc_toolchain_config",
    toolchain_identifier = "_llvm.linux.aarch64.cc_toolchain.identifier",
)

toolchain(
    name = "llvm.linux.aarch64.toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":_llvm.linux.aarch64.cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
